[NANOHUB][#275400][COM_SUPPORT] Make sure query title doesn't overlap badge

--- a/components/com_support/assets/css/support.css
+++ b/components/com_support/assets/css/support.css
@@ -274,7 +274,7 @@
 	.pane-queries li a.aquery {
 		display: block;
 		margin: 0;
-		padding: 0.2em 0 0.2em 0.2em;
+		padding: 0.2em 2em 0.2em 0.2em;
 		border: none;
 	}
 	.pane-queries li a.copy,
